# ChangeLog for sys-apps/pcmcia-cs
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/pcmcia-cs/Attic/ChangeLog,v 1.95 2005/07/05 08:54:08 brix Exp $

  05 Jul 2005; <brix@gentoo.org> pcmcia-cs-3.2.5-r2.ebuild:
  Removed alpha keyword since USE=pcmcia is masked on alpha.

*pcmcia-cs-3.2.8-r2 (02 Jul 2005)

  02 Jul 2005; <brix@gentoo.org>
  +files/pcmcia-cs-3.2.8-CS_EVENT_RESET_COMPLETE.patch,
  +pcmcia-cs-3.2.8-r2.ebuild:
  Backported CS_EVENT_RESET_COMPLETE fix from upstream, fixes bug #95111.

  30 Jun 2005; <brix@gentoo.org> pcmcia-cs-3.2.5-r2.ebuild,
  pcmcia-cs-3.2.5-r3.ebuild, pcmcia-cs-3.2.7-r3.ebuild,
  pcmcia-cs-3.2.7-r4.ebuild, pcmcia-cs-3.2.8.ebuild,
  pcmcia-cs-3.2.8-r1.ebuild:
  Provide virtual/pcmcia for preparation of sys-apps/pcmciautils.

  17 Jun 2005; Michael Hanselmann <hansmi@gentoo.org>
  pcmcia-cs-3.2.8.ebuild:
  Stable on ppc.

*pcmcia-cs-3.2.8-r1 (11 Jun 2005)

  11 Jun 2005; <brix@gentoo.org> +pcmcia-cs-3.2.8-r1.ebuild:
  Introduce USE="vanilla" for using the original network script instead of the
  Gentoo specific one, thanks to Kelly Price. This fixes bug #1990 and bug #95072.
  Also add debugging output for Configure arguments.

  27 May 2005; <brix@gentoo.org> pcmcia-cs-3.2.8.ebuild:
  Stable on x86.

  27 May 2005; Joseph Jezak <josejx@gentoo.org> pcmcia-cs-3.2.8.ebuild:
  Marked ~ppc for bug #90359.

  21 May 2005; Homer Parker <hparker@gentoo.org> pcmcia-cs-3.2.8.ebuild:
  Added ~amd64 to fix bug #90359

  09 May 2005; <brix@gentoo.org> files/pcmcia-cs-3.2.8-init.d:
  Start pcmcia init script after coldplug, bug #91981.

  08 May 2005; <brix@gentoo.org> +files/pcmcia-cs-3.2.8-gcc4.patch,
  -files/pcmcia-cs-3.2.8-man-pages.patch, pcmcia-cs-3.2.8.ebuild:
  Removed unused man-pages patch, added gcc4 patch as per bug #90359.

  04 May 2005; <brix@gentoo.org> pcmcia-cs-3.2.8.ebuild:
  Require in-kernel PCMCIA support for 2.6.x, warn users about in-kernel